Update ProductDetailFrame.java